spec/v1/examples/delivery/rendered/apps/delivery/flagger/service.yaml
# GENERATED. Never hand-edit.
---
apiVersion: v1
kind: Service
metadata:
  name: flagger
  namespace: delivery-system
  labels:
    app.kubernetes.io/name: flagger
    app.kubernetes.io/instance: flagger
    app.kubernetes.io/part-of: flagger
    app.kubernetes.io/managed-by: deploy-kit
    app.kubernetes.io/component: none
spec:
  selector:
    app.kubernetes.io/instance: flagger
  ports:
    - name: http
      port: 8080
      targetPort: http
